samples/_failures_safe/1761318832_c7f90e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a5297b8.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_1a5297b8.c:184:16: error: missing terminating " character
  184 |         printf("
      |                ^
./samples/SAFE/__tmp_1a5297b8.c:184:9: error: expected expression at end of input
  184 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_1a5297b8.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a5297b8.c:184:9: error: expected declaration or statement at end of input
